# irpc-schema

./: Cargo.toml  README.md
examples/: protocol.rs  service.rs
irpc-schema-derive/: Cargo.toml
irpc-schema-derive/src/: lib.rs
src/: lib.rs
tests/: smoke.rs
