[package]
name = "irpc-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
postcard = { version = "1.0.10", features = ["alloc"] }
serde = "1.0.219"
irpc-schema-derive = { path = "irpc-schema-derive", version = "0.1.0" }
tracing = "0.1.41"

[workspace]
members = ["irpc-schema-derive"]

[dev-dependencies]
anyhow = "1.0.98"
derive_more = { version = "2.0.1", features = ["from"] }
hex = "0.4.3"
testresult = "0.4.1"
