[package]
name = "irpc-schema"
version = "0.1.0"
edition = "2021"
description = "simple schema language for rpc calls"
authors = ["rklaehn <rklaehn@protonmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["quic", "schema", "rpc"]


[dependencies]
blake3 = "1.8.2"
postcard = { version = "1.0.10", features = ["alloc"] }
serde = "1.0.219"
irpc-schema-derive = { path = "irpc-schema-derive", version = "0.1.0", optional = true }
irpc = { version = "0.2.3", optional = true }

[workspace]
members = ["irpc-schema-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "irpc_schema_docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(irpc_schema_docsrs)"] }

[dev-dependencies]
anyhow = "1.0.98"
derive_more = { version = "2.0.1", features = ["from"] }
hex = "0.4.3"
testresult = "0.4.1"

[features]
derive = ["dep:irpc-schema-derive"]
irpc = ["dep:irpc"]
default = ["derive", "irpc"]