[package]
name = "irpc-schema-derive"
version = "0.1.0"
description = "derive macro for irpc-schema"
edition = "2021"
authors = ["rklaehn <rklaehn@protonmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["quic", "schema", "rpc"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
blake3 = "1.5.4"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.0.10", features = ["alloc"] }

